[package]
name = "pangpang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "tunnel"


[dependencies]
log = "0.4"
russh = "0.34.0-beta"
russh-keys = "0.22.0-beta"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"
async-trait = "0.1"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
async-recursion = "1.0"
hyper = { version = "0.14", features = ["full"] }
socks5-proto = "0.3"
alacritty_terminal = "0.17.0-rc"

[dev-dependencies]
simple_logger = "2.3.0"
